--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <nav>
         <h1>ABZ Movies</h1>
-        
-        <button data-link="about" class="scrollTo" >About<i class="fa-solid fa-chevron-down"></i></i></button>
+        <button><a href="/index.html"></a> Home</button>
+        <button data-link="about" class="scrollTo" >Abou<i class="fa-solid fa-chevron-down"></i></i></button>
         <button data-link="contact" class="scrollTo" >Contacts<i class="fa-solid fa-chevron-down"></i></i></button>
         </nav>
         
