--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <nav>
         <h1>ABZ Movies</h1>
         <button><a href="/index.html"></a> Home</button>
-        <button data-link="about" class="scrollTo" >Abou<i class="fa-solid fa-chevron-down"></i></i></button>
-        <button data-link="contact" class="scrollTo" >Contacts<i class="fa-solid fa-chevron-down"></i></i></button>
+        <button data-link="about" class="scrollTo" >About<i class="fa-solid fa-chevron-down"></i></i></button>
+        <button data-link="contact" class="scrollTo" >Contact<i class="fa-solid fa-chevron-down"></i></i></button>
         </nav>
         
 
