add search wrapper

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <h1>ABZ Movies</h1>
         <button><a href="/index.html"></a> Home</button>
         <button data-link="about" class="scrollTo" >About<i class="fa-solid fa-chevron-down"></i></i></button>
-        <button data-link="contact" class="scrollTo" >Contact<i class="fa-solid fa-chevron-down"></i></i></button>
+        <button data-link="contact" class="scrollTo" >Contacts<i class="fa-solid fa-chevron-down"></i></i></button>
         </nav>
         
 
-    <div class="searchWrapper">
+    <div class="searchWrappe">
         <label for="search">Search Actors Name here</label>
         <input type="search" id="search" data-search>
     </div>
