insert cards container

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         </nav>
         
 
-    <div class="searchWrappe">
+    <div class="searchWrapper">
         <label for="search">Search Actors Name here</label>
         <input type="search" id="search" data-search>
     </div>
 
-    <div class="actor-cards" data-actor-cards-container></div>
+    <div class="actor-card" data-actor-cards-container></div>
     
     <template data-user-template>
         <div class="card">
