insert cards template

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <input type="search" id="search" data-search>
     </div>
 
-    <div class="actor-card" data-actor-cards-container></div>
+    <div class="actor-cards" data-actor-cards-container></div>
     
     <template data-user-template>
-        <div class="card">
+        <div class="car">
             <!-- <div class="img"><img src="" alt="imageHere" height="20px" width="40px"></div>  -->
             <div class="header" data-header>Name</div>
             <div class="body" data-body>Movie@gmail.com</div>
