--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <div class="actor-cards" data-actor-cards-container></div>
     
     <template data-user-template>
-        <div class="car">
+        <div class="card">
             <!-- <div class="img"><img src="" alt="imageHere" height="20px" width="40px"></div>  -->
             <div class="header" data-header>Name</div>
-            <div class="body" data-body>Movie@gmail.com</div>
+            <div class="body" data-body>Movie</div>
         </div>
     </template>
     <hr>
