--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
     </template>
     <hr>
-    <footer>
+    <foote>
         <div id="contact">Contact<br>
             <i class="fa-brands fa-facebook"></i><i class="fa-brands fa-instagram"></i><i class="fa-brands fa-twitter"></i>
         </div>
