--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         </div>
     </template>
     <hr>
-    <foote>
-        <div id="contact">Contact<br>
+    <footer>
+        <div id="contact">Contacts<br>
             <i class="fa-brands fa-facebook"></i><i class="fa-brands fa-instagram"></i><i class="fa-brands fa-twitter"></i>
         </div>
         
