insert about section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <i class="fa-brands fa-facebook"></i><i class="fa-brands fa-instagram"></i><i class="fa-brands fa-twitter"></i>
         </div>
         
-        <div id="about">About <br> ABZ Movies is about the series breaking bad actor-based search web application that users may use to search for a particular <br>actor using the name and the role played as the filter method</div>
+        <div id="about">Abouts <br> ABZ Movies is about the series breaking bad actor-based search web application that users may use to search for a particular <br>actor using the name and the role played as the filter method</div>
     </footer>
     
     <script src="./src/index.js"></script>
