--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <button data-link="contact" class="scrollTo" >Contacts<i class="fa-solid fa-chevron-down"></i></i></button>
         </nav>
         
+        <div>
+            <p>This is my final commit</p>
+        </div>
 
     <div class="searchWrapper">
         <label for="search">Search Actors Name here</label>
@@ -40,6 +43,6 @@
         <div id="about">About <br> ABZ Movies is about the series breaking bad actor-based search web application that users may use to search for a particular <br>actor using the name and the role played as the filter method</div>
     </footer>
     
-    <script src="./src/index.j"></script>
+    <script src="./src/index.js"></script>
 </body>
 </html>
