--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
     <div class="searchWrapper">
-        <label for="search">Search Actors Name here</label>
+        <label for="search">Search Actors Name her</label>
         <input type="search" id="search" data-search>
     </div>
 
@@ -33,7 +33,7 @@
     </template>
 
     <hr>
-    
+
     <footer>
         <div id="contact">Contacts<br>
             <i class="fa-brands fa-facebook"></i><i class="fa-brands fa-instagram"></i><i class="fa-brands fa-twitter"></i>
