--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
     <div class="searchWrapper">
-        <label for="search">Search Actors Name her</label>
+        <label for="search">Search Actors Name here</label>
         <input type="search" id="search" data-search>
     </div>
 
@@ -28,7 +28,7 @@
     <template data-user-template>
         <div class="card">
             <div class="header" data-header>Name</div>
-            <div class="body" data-body>Movie</div>
+            <div class="body" data-body>Movies</div>
         </div>
     </template>
 
