--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <template data-user-template>
         <div class="card">
             <div class="header" data-header>Name</div>
-            <div class="body" data-body>Movies</div>
+            <div class="body" data-body>Movie</div>
         </div>
     </template>
 
